--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>Welcome To My Website!</title>
-  </head>
-  <body>
-    <h1>My Great Page!</h1>
-    <h2>Type some great stuff</h2>
-  </body>
+    <head>
+        <title>Norman Mundt</title>
+    </head>
+    <body>
+        <div>
+            <header>   
+            </header>
+            <section>
+                <h2>Experience</h2>
+                <div class="experience">
+                    <h3>Name of Employer</h3>
+                    <h3>Job Title</h3>
+                    <h4>Date Range</h4>
+                    <ul>
+                        <li>Thing 1</li>
+                        <li>Thing 2</li>
+                    </ul>
+                </div>   
+            </section>
+            <section>
+                <h2>Education</h2>
+                <div class="education">
+                    <h3>School</h3>
+                    <h3>Degree or Certificate</h3>
+                    <p>Area of Study</p>
+                </div>
+             </section>
+             <section>
+                 <h2>References</h2>
+                 <div class="references">
+                     <h3>Name</h3>
+                     <h3>Position</h3>
+                     <h3>email@email.com</h3>
+                 </div>
+             </section>
+             
+             
+       </div>
+    </body>
 </html>
