--- a/index.html
+++ b/index.html
@@ -2,6 +2,25 @@
 <html>
     <head>
         <title>Norman Mundt</title>
+        <style>
+          @import url('https://fonts.googleapis.com/css?family=Abril+Fatface|DM+Sans&display=swap');
+
+          body {
+            font-family: Arial, Helvetica, sans-serif;
+          }
+
+          h1 {
+            font-family: 'Abril+FatFace', sans-serif;
+          }
+          
+          h2 {
+            font-family: 'DM+Sans', sans-serif;
+          }
+
+          h4 {
+            font-variant-caps: all-small-caps;
+          }
+        </style>
     </head>
     <body>
         <div>
