--- a/index.html
+++ b/index.html
@@ -2,29 +2,12 @@
 <html>
     <head>
         <title>Norman Mundt</title>
-        <style>
-          @import url('https://fonts.googleapis.com/css?family=Abril+Fatface|DM+Sans&display=swap');
-
-          body {
-            font-family: Arial, Helvetica, sans-serif;
-          }
-
-          h1 {
-            font-family: 'Abril+FatFace', sans-serif;
-          }
-          
-          h2 {
-            font-family: 'DM+Sans', sans-serif;
-          }
-
-          h4 {
-            font-variant-caps: all-small-caps;
-          }
-        </style>
+        <link rel="stylesheet" href="site.css">    
     </head>
     <body>
         <div>
-            <header>   
+            <header>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea, tempora et sit sint ad officiis, laborum voluptate rem, deserunt facilis odio? Amet vel nemo numquam reprehenderit assumenda soluta eligendi quae!</p>  
             </header>
             <section>
                 <h2>Experience</h2>
